src/test/ui/suggestions/type-ascription-instead-of-method.stderr
error: expected type, found `"foo"`
  --> $DIR/type-ascription-instead-of-method.rs:2:13
   |
LL |     Box:new("foo".to_string())
   |        -    ^^^^^ expected type
   |        |
   |        help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to previous error

